# nfdump

./: .gitignore  .travis.yml  AUTHORS  BSD-license.txt  COPYING  ChangeLog  CreateSubHierarchy.pl  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  ToDo  UpdateChangelog.sh  aclocal.m4  autogen.sh  bootstrap  confdefs.h  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  conftest.c  flows  nfdump.pc.in  test.sh  test1.txt
doc/: Doxyfile.in  Makefile.am
man/: Makefile  Makefile.am  Makefile.in  ft2nfdump.1  geolookup.1  nfanon.1  nfcapd.1  nfdump.1  nfexpire.1  nfmeta.1  nfpcapd.1  nfprofile.1  nfreplay.1  sfcapd.1  torlookup.1
src/: Makefile.am  applybits_inline.c  asm_filter.txt  blocksort.c  blocksort.h  bookkeeper.c  collector.c  collector.h  collector_inline.c  content_dns.c  content_dns.h  expire.c  expire.h  exporter.c  exporter.h  geolookup.c  inline.c  ipfix.c  ipfix.h  ipv6.txt  ja3.c  ja3.h  kbtree.h  launch.c  maxmind-kb.c  maxmind-kb.h  maxmind-rb.c  maxmind-rb.h  maxmind.c  maxmind.h  md5.h  memhandle.c  memhandle.h  metric.c  metric.h  mmc.c  mmc.h  nbar.c  nbar.h  netflow_pcapd.c  (+36 more)
src/collector/: Makefile.am  backend.c  backend.h  bookkeeper.c  bookkeeper.h  collector.c  collector.h  collector_inline.c  collector_run_inline.c  expire.c  expire.h  filtered_repeater.c  filtered_repeater.h  flowsource.c  flowsource.h  ip128.c  ip128.h  launch.c  launch.h  metric.c  metric.h  nfnet.c  nfnet.h  nfstatfile.c  packet_frame.c  packet_frame.h  pcap_reader.c  pcap_reader.h  privsep.c  privsep.h  record_callback.c  record_callback.h  repeater.c  repeater.h  yaf_reader.c  yaf_reader.h
src/collector/backend/: backend.h  nffile_backend.c  nffile_backend.h  remote_backend.c  remote_backend.h
src/collector/network/: nfd_udp_crypto.h  nfnet.h  repeater.c
src/collector/process/: daemon.c  daemon.h
src/collector/reader/: pcap_reader.c  pcap_reader.h  yaf_reader.h
src/conf/: Makefile.am  nfconf.c  nfconf.h  nfdump.conf  nfdump.conf.dist  toml.c
src/decode/: Makefile.am  sha256
src/decode/digest/: md5.h  sha256.c  sha256.h
src/decode/dns/: dns.c
src/decode/ja3/: ja3.c  ja3.h
src/decode/ja4/: Readme.md  (+4 more)
src/ft2nfdump/: Makefile.am  ft2nfdump.c
src/include/: Makefile.am  exporter.h  ifvrf.h  ip128.h  kbtree.h  klist.h  map.h  nbar.h  netflow_pcapd.h  nfdump.h  rbtree.h  stream.h  thread_local.h
src/inline/: Makefile.am  applybits_inline.c  inline.c  itoa.c  metrohash.c  nfdump_inline.c  nffile_inline.c  perf.c  wyhash.h
src/lib/: Makefile.am  daemon.c  daemon.h  filter.h  flist.c  flist.h  fts_compat.c  fts_compat.h  gen_version.sh  grammar.y  id.h  ipconv.c  ipconv.h  lz4.c  lz4.h  nfdump.h  nffile.c  nffile.h  nffileV2.h  nftree.c  nftree.h  nfx.c  nfx.h  nfxV3.c  nfxV3.h  output_short.c  output_short.h  output_util.c  output_util.h  pidfile.c  pidfile.h  queue.c  queue.h  scanner.l  userio.h  util.c  util.h  version.c  version.h
src/libnfdump/: Makefile.am
src/libnffile/: Makefile.am  barrier.c  barrier.h  bookkeeper.c  bookkeeper.h  compat_1_6_x.c  daemon.c  flist.c  flist.h  fts_compat.c  fts_compat.h  gen_version.sh  id.h  ip128.c  ip128.h  logging.c  logging.h  nffile.c  nffile.h  nffileV2.h  nffileV3.c  nffileV3.h  nfthread.c  nfthread.h  nfxV3.c  nfxV3.h  nfxV4.c  nfxV4.h  output_short.c  pidfile.c  pidfile.h  queue.c  queue.h  userio.c  userio.h  util.c  util.h  vcs_track.h  version.c
src/maxmind/: Makefile.am  geolookup.c  maxmind.c  maxmind.h  mmcreate.c  mmcreate.h  mmhash.c  mmhash.h  updateGeoDB.sh
src/netflow/: Makefile.am  fnf.h  ipfix.c  ipfix.h  netflow_v1.c  netflow_v1.h  netflow_v5_v7.c  netflow_v5_v7.h  netflow_v9.c  netflow_v9.h  nfd_raw.c  nfd_raw.h  nfd_udp_crypto.c
src/nfanon/: Makefile.am  nfanon.c  panonymizer.c  panonymizer.h  rijndael.c  rijndael.h
src/nfcapd/: Makefile.am  netflow_pcapd.c  nfcapd.c
src/nfdump/: Makefile.am  blocksort.c  blocksort.h  exporter.c  heapsort_inline.c  ifvrf.c  memhandle.c  memhandle.h  nbar.c  nfdump.c  nffile_compat.c  nflowcache.c  nflowcache.h  nfprof.c  nfprof.h  nfstat.c  nfstat.h  spin_lock.h
src/nfexpire/: Makefile.am  expire.c  expire.h  nfexpire.c  nfstatfile.c  nfstatfile.h
src/nfmeta/: Makefile.am  nfmeta.c
src/nfpcapd/: Makefile.am  decode_ctx.h  decode_ip.c  decode_link.c  decode_proto.c  decode_transport.c  flowdump.c  flowdump.h  flowhash.c  flowhash.h  flowsend.c  flowsend.h  flowtree.c  flowtree.h  ip6_frag.c  ip6_frag.h  ip_frag.c  ip_frag.h  ipfrag.c  ipfrag.h  metrohash.c  nflog.h  nfpcapd.c  packet_bpf.c  packet_linux.c  packet_pcap.c  packet_pcap.h  packet_pcap_file.c  pcap_gzip.c  pcap_gzip.h  pcapdump.c  pcapdump.h  pcaproc.c  pcaproc.h  pflog.h
src/nfreader/: Makefile.am  nfreader.c
src/nfreplay/: Makefile.am  nfreplay.c  send_net.c  send_net.h  send_v5.c  send_v5.h  send_v9.c  send_v9.h  send_v9_ipfix.c  send_v9_ipfix.h
src/nfsen/: Makefile.am  nfprofile.c  nftrack.c  nftrack_rrd.c  nftrack_rrd.h  nftrack_stat.c  nftrack_stat.h  profile.c  profile.h
src/output/: Makefile.am  content_dns.c  itoa.c  output.c  output.h  output_csv.c  output_csv.h  output_csv_fast.c  output_fmt.c  output_fmt.h  output_json.c  output_json.h  output_ndjson.c  output_ndjson.h  output_newline_json.c  output_newline_json.h  output_pipe.c  output_pipe.h  output_raw.c  output_raw.h  output_util.c  output_util.h
src/sflow/: Makefile.am  sfcapd.c  sflow.h  sflow_decode.c  sflow_decode.h  sflow_drop.h  sflow_nfdump.c  sflow_nfdump.h  sflow_process.c  sflow_process.h  sflow_v2v4.h
src/test/: Makefile.am  nfgen.c  nfgen4.c  nftest.1.out  nftest.2.out  nftest.4.out  nftest.c  ref_bytes_sort.txt  ref_descending_sort.txt  ref_raw.txt  ref_tstart_sort.txt  runbz2.sh  runlz4.sh  runlzo.sh  runprepare.sh  runtest.sh  runtest_nfcapd.sh  runzstd.sh  test_append.c  test_append.sh  test_collect.sh  test_compress_lz4.sh  test_compress_lzo.sh  test_compress_zstd.sh  test_crypto_nfcapd.sh  test_memck.sh  test_nfanon.sh  test_nfcapd.sh  test_nfdump.sh  test_prepare.sh  testsetup.sh
src/tor/: Makefile.am  tor.c  torlookup  torlookup.c  updateTorDB.sh
(+148 files in other folders)
