
dist_man_MANS = nfcapd.1 nfdump.1 nfexpire.1 nfreplay.1 nfanon.1

if FT2NFDUMP
dist_man_MANS += ft2nfdump.1
endif

if MAXMIND
dist_man_MANS += geolookup.1
endif

if SFLOW
dist_man_MANS += sfcapd.1
endif

if NFPROFILE
dist_man_MANS += nfprofile.1
endif

if BUILDNFPCAPD
dist_man_MANS += nfpcapd.1
endif
